--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,8 @@
 
 
 <div class="main">
+<a href="project.html">Projects</a>
+
     
     <br><h1>Vinland Saga</h1>
     <span>Never ending story</span>
